All color displays use common layer now